name:                dostuff
version:             0.1.0.0
synopsis:            Locally scoped functions for the command line.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Loosefish
maintainer:          Loosefish@users.noreply.github.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable dostuff
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  -- other-modules:       
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.9 && <4.10,
                       text >=1.2 && <1.3,
                       directory >=1.2 && <1.3,
                       filepath >=1.4 && <1.5,
                       process >=1.4 && <1.5
  hs-source-dirs:      src
  default-language:    Haskell2010
