name:                    dostuff
version:                 0.2.0.0
synopsis:                Locally scoped functions for the command line.
license:                 MIT
license-file:            LICENSE
author:                  Loosefish
maintainer:              Loosefish@users.noreply.github.com
build-type:              Simple
extra-source-files:      README.md
cabal-version:           >=1.10

executable dostuff
    main-is:             Main.hs
    ghc-options:         -Wall -O2
    default-extensions:  OverloadedStrings
    build-depends:       base
                       , directory
                       , filepath
                       , process
    hs-source-dirs:      src
    default-language:    Haskell2010
